--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="theme-color" content="#1f2937" />
     <script src="https://telegram.org/js/telegram-web-app.js" async></script>
     <title>Chicken Road</title>
+    <style>
+      /* Prevent pull-to-refresh and improve mobile experience */
+      body {
+        overscroll-behavior: none;
+        -webkit-overflow-scrolling: touch;
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        overflow: hidden;
+      }
+      #root {
+        width: 100%;
+        height: 100vh;
+        overflow: hidden;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
